[workspace.package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
edition = "2024"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno-patch"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "crypto-primitives",
    "syscall",
]

# Fastest runtime configuration
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
debug-assertions = false
strip = false

# Make sure debug symbols are in the bench profile for flamegraphs
[profile.bench]
inherits = "profiling"

# This will compile slowly
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
debug = 2

# For O1 optimization but still fast(ish) compile times
[profile.fast]
inherits = "dev"
debug-assertions = true
# better recompile times
incremental = true
lto = "thin"
