[package]
categories.workspace = true
description = "Cryptographic primitives for Ceno zkVM guest"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_crypto_primitives"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ceno_syscall = { path = "../syscall" }
elliptic-curve = { version = "0.13.8", features = ["hazmat", "sec1", "ecdh"] }

[features]
default = []
profiling = []
